--- a/app/globals.css
+++ b/app/globals.css
@@ -96,12 +96,30 @@ h2 {
 /* --- Button styles --- */
 
 .button {
-    background-color: #020202; /* Initial color */
-    color: white; /* Text color */
+    padding: 8px 12px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 0.9rem;
+    background-color: #020202;
+    color: white;
+    min-width: fit-content;
+    text-align: center;
+    white-space: nowrap;
 }
 /* */
 .button:hover {
     background-color: #6F00FF !important; /* Hover color */
+}
+
+.button:disabled {
+    cursor: not-allowed;
+    background-color: #ccc;
+    color: #666;
+}
+
+.button.selected {
+    background-color: rgba(111, 0, 255, 0.6);
 }
 
 /* Chart Styles */
